# rb-pro5

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dump.txt  README.md  Update.md  dump.txt  position.csv
semesterprojekt/: CMakeLists.txt  main.cpp  main.new.cpp  main.old.cpp  matlab.m
semesterprojekt/experiments/: _0_Eps_0.1_ln_0.1_dis_0.7_max_actions_170.txt  _0_Eps_0.1_ln_0.1_dis_0.99_max_actions_170.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_100.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_1000.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_110.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_120.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_130.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_140.txt  _0_Eps_0.1_ln_0.1_dis_0.9_max_actions_170.txt  _0_Eps_0.1_ln_0.2_dis_0.9_max_actions_1000.txt  _0_Eps_0.1_ln_0.2_dis_0.9_max_actions_170.txt  _0_Eps_0.1_ln_0.3_dis_0.9_max_actions_170.txt  _0_Eps_0.1_ln_0.4_dis_0.9_max_actions_170.txt  _0_Eps_0.2_ln_0.1_dis_0.9_max_actions_170.txt  _0_Eps_0.2_ln_0.2_dis_0.9_max_actions_1000.txt  _0_Eps_0.3_ln_0.1_dis_0.9_max_actions_170.txt  _0_Eps_0.4_ln_0.1_dis_0.9_max_actions_170.txt  _1_Eps_0.1_ln_0.1_dis_0.7_max_actions_170.txt  _1_Eps_0.1_ln_0.1_dis_0.99_max_actions_170.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_100.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_1000.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_110.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_120.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_130.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_140.txt  _1_Eps_0.1_ln_0.1_dis_0.9_max_actions_170.txt  _1_Eps_0.1_ln_0.2_dis_0.9_max_actions_1000.txt  _1_Eps_0.1_ln_0.2_dis_0.9_max_actions_170.txt  _1_Eps_0.1_ln_0.3_dis_0.9_max_actions_170.txt  _1_Eps_0.1_ln_0.4_dis_0.9_max_actions_170.txt  _1_Eps_0.2_ln_0.1_dis_0.9_max_actions_170.txt  _1_Eps_0.2_ln_0.2_dis_0.9_max_actions_1000.txt  (+138 more)
semesterprojekt/src/: Q_agent.cpp  (+8 more)
(+674 files in other folders)
